# RoadmapProject

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Constants.h  Display.cpp  Display.h  Dockerfile  InputClass.h  README.md  RoadmapApp.h  SearchEngine.h  app  data.tmp  data.txt  encryptor.h  entry.cpp  entry.h  inputhandle.cpp  main.cpp  manager.cpp  manager.h  run.sh  storage.cpp  validation.cpp  validation.h
data/: info.txt
exports/: info.txt
src/: main.cpp
src/core/: entry.cpp  manager.cpp  manager.h
src/include/: Constants.h  Display.hpp  InputClass.h  InputClass.hpp  RoadmapApp.h  RoadmapApp.hpp  SearchEngine.h  SearchEngine.hpp  entry.h  entry.hpp  manager.h  manager.hpp  storage.h  storage.hpp  validation.h  validation.hpp
src/io/: inputhandle.cpp  storage.cpp  storage.h
src/search/: SearchEngine.cpp
src/ui/: Display.cpp  Display.h  RoadmapApp.cpp  RoadmapApp.h  menu.cpp
src/valids/: validation.cpp
tests/: test_entry.cpp  test_storage.cpp
